# dvn

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  SConstruct  config.py  scons.py  user.cmake.example  user.py.example
cmake/: .gitignore  create_executable.cmake  create_library.cmake  create_test.cmake  find_libs.cmake  initialize.cmake  local.cmake.example
cmake/lib/: assimp.cmake  boost.cmake  gtest.cmake
cmake/packages_local/: .gtest.cmake.swo  assimp.cmake  sdl.cmake
cmake/packages_local.example/: gtest.cmake
include/dvn/: foo.h
include/dvn/math/: constants.h  degrees.h  quantity.h  radians.h  real.h  scalar.h  vec2.h  vec3.h  vec4.h  vector2.h
include/dvn/qty/: angle.h  length.h  quantity.h  real.h
src/dvn/: CMakeLists.txt  SConscript  foo.cpp
src/dvn/math/: quantity.cpp  vec2.cpp
src/hello/: CMakeLists.txt  SConscript  main.cpp
test/dvn/: CMakeLists.txt  build.py  foo.cpp
test/dvn/math/: quantity.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp  vec2.cpp
test/dvn/qty/: test_angle.cpp  test_length.cpp
tests/dvn/: SConscript  foo.cpp
